Hard sets ES_HEAP_SIZE to 4g in order to test

--- a/templates/etc/init.d/elasticsearch.RedHat.erb
+++ b/templates/etc/init.d/elasticsearch.RedHat.erb
@@ -18,7 +18,7 @@
 
 #
 # init.d / servicectl compatibility (openSUSE)
-#
+
 if [ -f /etc/rc.status ]; then
     . /etc/rc.status
     rc_reset
@@ -37,7 +37,7 @@ pidfile=/var/run/elasticsearch/${prog}.pid
 
 [ -e /etc/sysconfig/$prog ] && . /etc/sysconfig/$prog
 
-export ES_HEAP_SIZE
+export ES_HEAP_SIZE=4gb
 export ES_HEAP_NEWSIZE
 export ES_DIRECT_SIZE
 export ES_JAVA_OPTS
